--- a/callback.html
+++ b/callback.html
@@ -33,7 +33,7 @@
 	<link rel="icon" type="image/png" href="assets/images/favicons/96x96.png">
 	<link rel="icon" type="image/png" href="assets/images/favicons/160x160.png">
 	<link rel="icon" type="image/png" href="assets/images/favicons/192x192.png"-->
-	<link rel="stylesheet" href="build/css/suppliers.bundle.min.css">
+	<link rel="stylesheet" href="build/css/callback.bundle.min.css">
 </head>
 <body>
 	<div id="page">
@@ -67,6 +67,9 @@
 						<li>
 							<span>пн-пт: 9:00 - 18:00</span>
 						</li>
+						<li>
+							<a href="callback.html">зворотній зв'язок</a>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -75,9 +78,9 @@
 					<nav class="menu">
 						<ul>
 							<li><a href="index.html">Головна</a></li>
-							<li><a href="about.html">Про компанію</a></li>
 							<li><a href="project.html">Наш проект</a></li>
-							<li class="active"><a href="suppliers.html">Виробники</a></li>
+							<li><a href="about.html">Про компанію</a></li>
+							<li><a href="suppliers.html">Виробники</a></li>
 							<li><a href="products.html">Продукти</a></li>
 							<li><a href="contacts.html">Контакти</a></li>
 						</ul>
@@ -89,89 +92,46 @@
 			<div class="outer inside">
 				<aside id="navigation-holder">
 					<ul>
-						<li><a href="suppliers.html">Наші виробники</a></li>
-						<li><a href="suppliers-biskvit-shokolad.html">Бісквіт-шоколад</a></li>
-						<li><a href="suppliers-solodkiy-svit.html">Солодкий світ</a></li>
-						<li><a href="suppliers-econia.html">Еконія</a></li>
-						<li><a href="suppliers-sergio.html">Серджіо</a></li>
-						<li><a href="suppliers-kvartet.html">Квартет</a></li>
-						<li><a href="suppliers-ramonka.html">Рамонка</a></li>
-						<li><a href="suppliers-vitmark.html">Вітмарк-Україна</a></li>
-						<li class="active"><a href="suppliers-cherkasu-hlib.html">Черкасихліб</a></li>
+						<li class="active"><a href="callback.html">Зворотній зв'язок</a></li>
 					</ul>
 				</aside>
-				<section id="content-info-holder" class="supplier-inside">
-					<h1>Черкасихліб</h1>
+				<section id="content-info-holder">
+					<h1>Ваша думка має значення</h1>
 					<span class="sprtr-h"></span>
-					<figure>
-						<img src="build/images/suppliers/cherkasy-hlib.png" alt="Черкасихліб">
-					</figure>
-					<p>Історія підприємства починається у 1932 році. На сьогодні підприємство займає третє місце в Україні за обсягами виробництва хлібобулочних виробів і є лідером по впровадженню нових технологічних ліній та процесів.</p>
-					<p>Підприємство виробляє 270 найменувань хлібобулочної та кондитерської продукції. Середньомісячний обсяг виробництва - 4,5 тис. Т. Домінуючу позицію в асортименті займає хліб - 75%, булочні і здобні вироби - 20,1%, кондитерські вироби - 2,1%, сухарі - 1,1%, соломка - 1, 8%, бубличні вироби - 0,2%.</p>
-					<p>З метою зміцнення конкурентної позиції на ринку, а також підвищення якості продукції, з 2010 року на підприємстві впроваджується система управління безпекою харчових продуктів відповідно до стандарту ГОСТ 4161-2003.</p>
-				</section>
-			</div>
-			<section class="pre-footer">
-				<div class="inner">
-					<div class="part contacts">
-						<h3>Контакти</h3>
+					<p>Шановні Батьки!</p>
+					<p>Перед тим, як відіслати запитання експерту Call Центру, переконайтеся, будь ласка, що не можете знайти необхідних відомостей власноруч. Щоб отримати відповідь на запитання, скориставшись пошуковою системою сайту, яка миттєво віднайде всі сторінки з інформацією на Ваш запит. Для цього введіть, будь ласка, ключові слова в текстове поле пошуку і натисніть "шукати".</p>
+					<p>Ваші питання, побажання, зауваження або коментарі стосовно компанії «Дорога Здоров’я», веб-сайту <strong>www.kdz.com.ua</strong>, надсилайте до експертів Call Центру за допомогою наведеної нижче форми. Ми будемо раді Вам допомогти.</p>
+					<p>Для того щоб отримати відповідь експерта, ОБОВ'ЯЗКОВО вкажіть Ваш e-mail</p>
+					<p>При повторному зверненні просимо зберігати історію листування. Повторні звернення без історії листування можуть подовжити термін надання відповіді</p>
+					<p><span class="attention">Увага!</span> Перевіряйте Вашу електронну адресу! Від цього залежить можливість відправлення Вам відповіді!</p>
+					<p>Листи розглядаються з 9:00 до 17:30 щодня, окрім вихідних та святкових днів.</p>
+					<div class="form-holder">
+						<h2>Форма зворотного зв'язку</h2>
 						<span class="sprtr-h"></span>
-						<ul>
-							<li>
-								<span class="item"><span class="hr-pin"></span>03002, м. Київ, вул. Ярославів Вал 13/2</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-shedule"></span>пн.-пт. 9:00 - 18:00</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-phone"></span>+38 (044) 999 9999</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-email"></span>info@kdz.com.ua</span>
-							</li>
-						</ul>
-					</div>
-					<div class="part navigation">
-						<h3>Всі розділи</h3>
-						<span class="sprtr-h"></span>
-						<div class="list-holder">
-							<ul>
-								<li><a href="#">Головна</a></li>
-								<li><a href="#">Наш проект</a></li>
-								<li><a href="#">Про компанію</a></li>
-								<li><a href="#">Виробники</a></li>
-								<li><a href="#">Асортимент продуктів</a></li>
-								<li><a href="#">Галерея</a></li>
-								<li><a href="#">Новини</a></li>
-								<li><a href="#">Як отримати картку?</a></li>
-								<li><a href="#">Акції та пропозиції</a></li>
-								<li><a href="#">Як користуватись автоматом?</a></li>
-								<li><a href="#">Як стати клієнтом?</a></li>
-								<li><a href="#">Як поповнити картку?</a></li>
-								<li><a href="#">Стати партнером</a></li>
-								<li><a href="#">Питання-відповідь</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="part entrance">
-						<h3>Вхід для батьків</h3>
-						<span class="sprtr-h"></span>
-						<form action="#" method="POST" id="entrance-form">
+						<form action="#" method="POST" id="callback-form">
 							<div class="field-area">
-								<input type="tel" name="user[phone]" value="" placeholder="+38 (044) 999 9999" id="entrance-user-phone" data-inputmask="'mask': '+38 (999) 999 9999'">
-								<label for="entrance-user-phone"><span class="hr-phone"></span></label>
+								<label for="callback-username">Ім'я</label>
+								<input type="text" name="callback[username]" value="" placeholder="Впишіть ваше ім'я" id="callback-username" data-rule-required="true" data-msg-required="Це поле не може бути порожнім">
 							</div>
 							<div class="field-area">
-								<input type="password" name="user[password]" value="" placeholder="ваш пароль" id="entrance-user-password">
-								<label for="entrance-user-password"><span class="hr-lock"></span></label>
+								<label for="callback-usermail">Електронна пошта</label>
+								<input type="email" name="callback[usermail]" value="" placeholder="Впишіть вашу електронну пошту" id="callback-usermail" data-rule-required="true" data-msg-required="Це поле не може бути порожнім" data-rule-email="true" data-msg-email="Це не виглядає як справжня електронна пошта">
+							</div>
+							<div class="field-area">
+								<label for="callback-userphone">Телефон</label>
+								<input type="tel" name="callback[userphone]" value="" placeholder="Вкажіть ваш номер телефону" id="callback-userphone" data-rule-required="true" data-msg-required="Це поле не може бути порожнім" data-mask="+38 (999) 999-9999">
+							</div>
+							<div class="field-area">
+								<label for="callback-usertext">Повідомлення</label>
+								<textarea name="callback[usertext]" placeholder="Напишіть нам повідомлення" id="callback-usertext" data-rule-required="true" data-msg-required="Напишіть нам бажаюче повідомлення"></textarea>
 							</div>
 							<button type="submit">
-								<span>Увійти</span>
+								<span>Відправити</span>
 							</button>
 						</form>
 					</div>
-				</div>
-			</section>
+				</section>
+			</div>
 		</main>
 	</div>
 	<footer id="footer" class="sticky">
@@ -203,7 +163,7 @@
 	<script src="jspm_packages/system.js"></script>
 	<script src="jspm.config.js"></script>
 	<script>
-		System.import("assets/js/app/suppliers");
+		System.import("assets/js/app/callback");
 	</script>
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
