--- a/products.html
+++ b/products.html
@@ -67,6 +67,9 @@
 						<li>
 							<span>пн-пт: 9:00 - 18:00</span>
 						</li>
+						<li>
+							<a href="callback.html">зворотній зв'язок</a>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -102,38 +105,23 @@
 					<div class="grid">
 						<div class="row">
 							<article class="col product">
-								<div class="slider-holder">
-									<ul class="slider">
-										<li class="slide">
-											<figure><img src="build/images/products/vitmark/jaffa/cars-1.jpg" alt="Jaffa juice"></figure>
-										</li>
-										<li class="slide">
-											<figure><img src="build/images/products/vitmark/jaffa/cars-2.jpg" alt="Jaffa juice"></figure>
-										</li>
-										<li class="slide">
-											<figure><img src="build/images/products/vitmark/jaffa/cars-3.jpg" alt="Jaffa juice"></figure>
-										</li>
-										<li class="slide">
-											<figure><img src="build/images/products/vitmark/jaffa/cars-4.jpg" alt="Jaffa juice"></figure>
-										</li>
-										<li class="slide">
-											<figure><img src="build/images/products/vitmark/jaffa/cars-5.jpg" alt="Jaffa juice"></figure>
-										</li>
-										<li class="slide">
-											<figure><img src="build/images/products/vitmark/jaffa/cars-6.jpg" alt="Jaffa juice"></figure>
-										</li>
-									</ul>
-									<span class="arrow arrow-left hr-left-arrow"></span>
-									<span class="arrow arrow-right hr-right-arrow"></span>
-									<span class="counter-holder"></span>
-								</div>
+								<figure>
+									<img src="build/images/products/vitmark/jaffa/cars-1.jpg" alt="jaffa cars">
+								</figure>
 								<h2>Сік "Jaffa"</h2>
+								<div class="price-weight-holder">
+									<span class="weight">125мл</span>
+									<span class="price">12,50 грн.</span>
+								</div>
 								<ul class="futures-list-holder">
 									<li>
-										<p><span>Смак:</span> мультивітамін</p>
+										<p><span>Жири:</span> 1,3г</p>
 									</li>
 									<li>
-										<p><span>Вага:</span> 125мл</p>
+										<p><span>Білки:</span> 11г</p>
+									</li>
+									<li>
+										<p><span>Вуглеводи:</span> 70,5г</p>
 									</li>
 								</ul>
 								<div class="btn-small">
@@ -141,38 +129,23 @@
 								</div>
 							</article>
 							<article class="col product">
-								<div class="slider-holder">
-									<ul class="slider">
-										<li class="slide">
-											<figure><img src="build/images/products/vitmark/jaffa/fairies-1.jpg" alt="Jaffa juice"></figure>
-										</li>
-										<li class="slide">
-											<figure><img src="build/images/products/vitmark/jaffa/fairies-2.jpg" alt="Jaffa juice"></figure>
-										</li>
-										<li class="slide">
-											<figure><img src="build/images/products/vitmark/jaffa/fairies-3.jpg" alt="Jaffa juice"></figure>
-										</li>
-										<li class="slide">
-											<figure><img src="build/images/products/vitmark/jaffa/fairies-4.jpg" alt="Jaffa juice"></figure>
-										</li>
-										<li class="slide">
-											<figure><img src="build/images/products/vitmark/jaffa/fairies-5.jpg" alt="Jaffa juice"></figure>
-										</li>
-										<li class="slide">
-											<figure><img src="build/images/products/vitmark/jaffa/fairies-6.jpg" alt="Jaffa juice"></figure>
-										</li>
-									</ul>
-									<span class="arrow arrow-left hr-left-arrow"></span>
-									<span class="arrow arrow-right hr-right-arrow"></span>
-									<span class="counter-holder"></span>
-								</div>
+								<figure>
+									<img src="build/images/products/vitmark/jaffa/cars-1.jpg" alt="jaffa cars">
+								</figure>
 								<h2>Сік "Jaffa"</h2>
+								<div class="price-weight-holder">
+									<span class="weight">125мл</span>
+									<span class="price">12,50 грн.</span>
+								</div>
 								<ul class="futures-list-holder">
 									<li>
-										<p><span>Смак:</span> мультивітамін</p>
+										<p><span>Жири:</span> 1,3г</p>
 									</li>
 									<li>
-										<p><span>Вага:</span> 125мл</p>
+										<p><span>Білки:</span> 11г</p>
+									</li>
+									<li>
+										<p><span>Вуглеводи:</span> 70,5г</p>
 									</li>
 								</ul>
 								<div class="btn-small">
@@ -180,68 +153,171 @@
 								</div>
 							</article>
 							<article class="col product">
-								<div class="slider-holder">
-									<ul class="slider">
-										<li class="slide">
-											<figure><img src="build/images/products/kvartet/cookie-1.jpg" alt="cookie"></figure>
-										</li>
-										<li class="slide">
-											<figure><img src="build/images/products/kvartet/cookie-2.jpg" alt="cookie"></figure>
-										</li>
-										<li class="slide">
-											<figure><img src="build/images/products/kvartet/cookie-3.jpg" alt="cookie"></figure>
-										</li>
-										<li class="slide">
-											<figure><img src="build/images/products/kvartet/cookie-4.jpg" alt="cookie"></figure>
-										</li>
-										<li class="slide">
-											<figure><img src="build/images/products/kvartet/cookie-5.jpg" alt="cookie"></figure>
-										</li>
-										<li class="slide">
-											<figure><img src="build/images/products/kvartet/cookie-6.jpg" alt="cookie"></figure>
-										</li>
-										<li class="slide">
-											<figure><img src="build/images/products/kvartet/cookie-7.jpg" alt="cookie"></figure>
-										</li>
-										<li class="slide">
-											<figure><img src="build/images/products/kvartet/cookie-8.jpg" alt="cookie"></figure>
-										</li>
-										<li class="slide">
-											<figure><img src="build/images/products/kvartet/cookie-9.jpg" alt="cookie"></figure>
-										</li>
-										<li class="slide">
-											<figure><img src="build/images/products/kvartet/cookie-10.jpg" alt="cookie"></figure>
-										</li>
-										<li class="slide">
-											<figure><img src="build/images/products/kvartet/cookie-11.jpg" alt="cookie"></figure>
-										</li>
-										<li class="slide">
-											<figure><img src="build/images/products/kvartet/cookie-12.jpg" alt="cookie"></figure>
-										</li>
-										<li class="slide">
-											<figure><img src="build/images/products/kvartet/cookie-13.jpg" alt="cookie"></figure>
-										</li>
-										<li class="slide">
-											<figure><img src="build/images/products/kvartet/cookie-14.jpg" alt="cookie"></figure>
-										</li>
-										<li class="slide">
-											<figure><img src="build/images/products/kvartet/cookie-15.jpg" alt="cookie"></figure>
-										</li>
-										<li class="slide">
-											<figure><img src="build/images/products/kvartet/cookie-16.jpg" alt="cookie"></figure>
-										</li>
-									</ul>
-									<span class="arrow arrow-left hr-left-arrow"></span>
-									<span class="arrow arrow-right hr-right-arrow"></span>
-									<span class="counter-holder"></span>
+								<figure>
+									<img src="build/images/products/vitmark/jaffa/cars-1.jpg" alt="jaffa cars">
+								</figure>
+								<h2>Сік "Jaffa"</h2>
+								<div class="price-weight-holder">
+									<span class="weight">125мл</span>
+									<span class="price">12,50 грн.</span>
 								</div>
-								<h2>Пряник "Міні-Джинджер"</h2>
 								<ul class="futures-list-holder">
 									<li>
-										<p><span>Серія:</span> професії</p>
+										<p><span>Жири:</span> 1,3г</p>
 									</li>
 									<li>
-										<p><span>Вага:</span> 25гр.</p>
+										<p><span>Білки:</span> 11г</p>
+									</li>
+									<li>
+										<p><span>Вуглеводи:</span> 70,5г</p>
+									</li>
+								</ul>
+								<div class="btn-small">
+									<a href="#">Детальніше</a>
+								</div>
+							</article>
+						</div>
+						<div class="row">
+							<article class="col product">
+								<figure>
+									<img src="build/images/products/vitmark/jaffa/cars-1.jpg" alt="jaffa cars">
+								</figure>
+								<h2>Сік "Jaffa"</h2>
+								<div class="price-weight-holder">
+									<span class="weight">125мл</span>
+									<span class="price">12,50 грн.</span>
+								</div>
+								<ul class="futures-list-holder">
+									<li>
+										<p><span>Жири:</span> 1,3г</p>
+									</li>
+									<li>
+										<p><span>Білки:</span> 11г</p>
+									</li>
+									<li>
+										<p><span>Вуглеводи:</span> 70,5г</p>
+									</li>
+								</ul>
+								<div class="btn-small">
+									<a href="#">Детальніше</a>
+								</div>
+							</article>
+							<article class="col product">
+								<figure>
+									<img src="build/images/products/vitmark/jaffa/cars-1.jpg" alt="jaffa cars">
+								</figure>
+								<h2>Сік "Jaffa"</h2>
+								<div class="price-weight-holder">
+									<span class="weight">125мл</span>
+									<span class="price">12,50 грн.</span>
+								</div>
+								<ul class="futures-list-holder">
+									<li>
+										<p><span>Жири:</span> 1,3г</p>
+									</li>
+									<li>
+										<p><span>Білки:</span> 11г</p>
+									</li>
+									<li>
+										<p><span>Вуглеводи:</span> 70,5г</p>
+									</li>
+								</ul>
+								<div class="btn-small">
+									<a href="#">Детальніше</a>
+								</div>
+							</article>
+							<article class="col product">
+								<figure>
+									<img src="build/images/products/vitmark/jaffa/cars-1.jpg" alt="jaffa cars">
+								</figure>
+								<h2>Сік "Jaffa"</h2>
+								<div class="price-weight-holder">
+									<span class="weight">125мл</span>
+									<span class="price">12,50 грн.</span>
+								</div>
+								<ul class="futures-list-holder">
+									<li>
+										<p><span>Жири:</span> 1,3г</p>
+									</li>
+									<li>
+										<p><span>Білки:</span> 11г</p>
+									</li>
+									<li>
+										<p><span>Вуглеводи:</span> 70,5г</p>
+									</li>
+								</ul>
+								<div class="btn-small">
+									<a href="#">Детальніше</a>
+								</div>
+							</article>
+						</div>
+						<div class="row">
+							<article class="col product">
+								<figure>
+									<img src="build/images/products/vitmark/jaffa/cars-1.jpg" alt="jaffa cars">
+								</figure>
+								<h2>Сік "Jaffa"</h2>
+								<div class="price-weight-holder">
+									<span class="weight">125мл</span>
+									<span class="price">12,50 грн.</span>
+								</div>
+								<ul class="futures-list-holder">
+									<li>
+										<p><span>Жири:</span> 1,3г</p>
+									</li>
+									<li>
+										<p><span>Білки:</span> 11г</p>
+									</li>
+									<li>
+										<p><span>Вуглеводи:</span> 70,5г</p>
+									</li>
+								</ul>
+								<div class="btn-small">
+									<a href="#">Детальніше</a>
+								</div>
+							</article>
+							<article class="col product">
+								<figure>
+									<img src="build/images/products/vitmark/jaffa/cars-1.jpg" alt="jaffa cars">
+								</figure>
+								<h2>Сік "Jaffa"</h2>
+								<div class="price-weight-holder">
+									<span class="weight">125мл</span>
+									<span class="price">12,50 грн.</span>
+								</div>
+								<ul class="futures-list-holder">
+									<li>
+										<p><span>Жири:</span> 1,3г</p>
+									</li>
+									<li>
+										<p><span>Білки:</span> 11г</p>
+									</li>
+									<li>
+										<p><span>Вуглеводи:</span> 70,5г</p>
+									</li>
+								</ul>
+								<div class="btn-small">
+									<a href="#">Детальніше</a>
+								</div>
+							</article>
+							<article class="col product">
+								<figure>
+									<img src="build/images/products/vitmark/jaffa/cars-1.jpg" alt="jaffa cars">
+								</figure>
+								<h2>Сік "Jaffa"</h2>
+								<div class="price-weight-holder">
+									<span class="weight">125мл</span>
+									<span class="price">12,50 грн.</span>
+								</div>
+								<ul class="futures-list-holder">
+									<li>
+										<p><span>Жири:</span> 1,3г</p>
+									</li>
+									<li>
+										<p><span>Білки:</span> 11г</p>
+									</li>
+									<li>
+										<p><span>Вуглеводи:</span> 70,5г</p>
 									</li>
 								</ul>
 								<div class="btn-small">
@@ -252,67 +328,6 @@
 					</div>
 				</section>
 			</div>
-			<section class="pre-footer">
-				<div class="inner">
-					<div class="part contacts">
-						<h3>Контакти</h3>
-						<span class="sprtr-h"></span>
-						<ul>
-							<li>
-								<span class="item"><span class="hr-pin"></span>03002, м. Київ, вул. Ярославів Вал 13/2</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-shedule"></span>пн.-пт. 9:00 - 18:00</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-phone"></span>+38 (044) 999 9999</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-email"></span>info@kdz.com.ua</span>
-							</li>
-						</ul>
-					</div>
-					<div class="part navigation">
-						<h3>Всі розділи</h3>
-						<span class="sprtr-h"></span>
-						<div class="list-holder">
-							<ul>
-								<li><a href="#">Головна</a></li>
-								<li><a href="#">Наш проект</a></li>
-								<li><a href="#">Про компанію</a></li>
-								<li><a href="#">Виробники</a></li>
-								<li><a href="#">Асортимент продуктів</a></li>
-								<li><a href="#">Галерея</a></li>
-								<li><a href="#">Новини</a></li>
-								<li><a href="#">Як отримати картку?</a></li>
-								<li><a href="#">Акції та пропозиції</a></li>
-								<li><a href="#">Як користуватись автоматом?</a></li>
-								<li><a href="#">Як стати клієнтом?</a></li>
-								<li><a href="#">Як поповнити картку?</a></li>
-								<li><a href="#">Стати партнером</a></li>
-								<li><a href="#">Питання-відповідь</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="part entrance">
-						<h3>Вхід для батьків</h3>
-						<span class="sprtr-h"></span>
-						<form action="#" method="POST" id="entrance-form">
-							<div class="field-area">
-								<input type="tel" name="user[phone]" value="" placeholder="+38 (044) 999 9999" id="entrance-user-phone" data-inputmask="'mask': '+38 (999) 999 9999'">
-								<label for="entrance-user-phone"><span class="hr-phone"></span></label>
-							</div>
-							<div class="field-area">
-								<input type="password" name="user[password]" value="" placeholder="ваш пароль" id="entrance-user-password">
-								<label for="entrance-user-password"><span class="hr-lock"></span></label>
-							</div>
-							<button type="submit">
-								<span>Увійти</span>
-							</button>
-						</form>
-					</div>
-				</div>
-			</section>
 		</main>
 	</div>
 	<footer id="footer" class="sticky">
