--- a/project-get-card.html
+++ b/project-get-card.html
@@ -67,6 +67,9 @@
 						<li>
 							<span>пн-пт: 9:00 - 18:00</span>
 						</li>
+						<li>
+							<a href="callback.html">зворотній зв'язок</a>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -75,8 +78,8 @@
 					<nav class="menu">
 						<ul>
 							<li><a href="index.html">Головна</a></li>
-							<li><a href="about.html">Про компанію</a></li>
 							<li class="active"><a href="project.html">Наш проект</a></li>
+							<li><a href="about.html">Про компанію</a></li>
 							<li><a href="suppliers.html">Виробники</a></li>
 							<li><a href="products.html">Продукти</a></li>
 							<li><a href="contacts.html">Контакти</a></li>
@@ -91,7 +94,6 @@
 					<ul>
 						<li><a href="project.html">Наш проект</a></li>
 						<li><a href="project-advantage.html">Переваги проекту</a></li>
-						<li><a href="project-vending-machines.html">Наші вендінгові автомати</a></li>
 						<li class="active"><a href="project-get-card.html">Як отримати картку або браслет</a></li>
 						<li><a href="project-card-refill.html">Як поповнити картку або браслет</a></li>
 						<li><a href="project-how-to-use-vending-machine.html">Як користуватися вендінговим автоматов</a></li>
@@ -100,73 +102,37 @@
 				<section id="content-info-holder" class="advantage">
 					<h1>Як отримати картку або браслет</h1>
 					<span class="sprtr-h"></span>
-					<p>Браслет або картку «Дорога Здоров’я» ви можете отримати у будь-який момент поштою, заповнивши нашу анкету у школі, або на сайті нашої компанії.</p>
-					<p>Для отримання картки «Дорога Здоров’я», вам необхідно заповнити анкету та підписати угоду користувача (на зворотньому боці). Анкета буде знаходитись у конверті з нашою адресою. Після цього, вам достатньо кинути конверт у поштову скриньку, який знаходиться поблизу торговельного автомату, або у будь-яку поштову скриньку «Укрпошти».</p>
-					<p><span class="attention">Увага!</span> За відправку конверту на нашу адресу вже сплачено. Після отримання анкети, наша компанія відправить на вказану вами адресу  картку або браслет, інформаційні матеріали та інструкцію про поповнення вашого персонального рахунку. Карточка надійде вам вже активована. Вартість активації буде вирахувана з вашого карткового рахунку.</p>
-					<p>При заповненні анкети на сайті, ви отримаєте карточку або браслет за адресою, яка буда вказана у анкеті. Вам потрібно заповнити анкету та підписати електронну угоду користувача. Карточка надійде вам вже активована. Вартість активації карточки буде вирахувана з вашого персонального рахунку. Поповнити картку ви можете на сайті.</p>
-				</section>
-			</div>
-			<section class="pre-footer">
-				<div class="inner">
-					<div class="part contacts">
-						<h3>Контакти</h3>
+					<p>Браслет або картку «Дорога Здоров’я» Ви можете отримати у будь-який момент поштою, заповнивши нашу анкету у школі, або на сайті нашої компанії.</p>
+					<p>Для отримання картки «Дорога Здоров’я», вам необхідно заповнити анкету та підписати угоду користувача (на зворотньому боці). Після цього, Вам достатньо кинути анкету у поштову скриньку, яка знаходиться зліва у самому торговельному автоматі.</p>
+					<p>Після отримання анкети, наша компанія відправить на вказану Вами адресу картку або браслет, інформаційні матеріали та інструкцію про поповнення вашого персонального рахунку. Карточка надійде вам вже активована. Вартість активації у розмірі 19 гривень буде вирахувана з Вашого персонального рахунку після першого поповнення.</p>
+					<p>При заповненні анкети на сайті, Ви отримаєте карточку або браслет за адресою, яка буда вказана у анкеті. Вам потрібно заповнити анкету та підписати електронну угоду користувача. Карточка надійде вам вже активована. Вартість активації у розмірі 19 грн буде вирахувана з Вашого персонального рахунку після першого поповнення.</p>
+					<div class="form-holder">
+						<h2>Замовте браслет або картку</h2>
 						<span class="sprtr-h"></span>
-						<ul>
-							<li>
-								<span class="item"><span class="hr-pin"></span>03002, м. Київ, вул. Ярославів Вал 13/2</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-shedule"></span>пн.-пт. 9:00 - 18:00</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-phone"></span>+38 (044) 999 9999</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-email"></span>info@kdz.com.ua</span>
-							</li>
-						</ul>
-					</div>
-					<div class="part navigation">
-						<h3>Всі розділи</h3>
-						<span class="sprtr-h"></span>
-						<div class="list-holder">
-							<ul>
-								<li><a href="#">Головна</a></li>
-								<li><a href="#">Наш проект</a></li>
-								<li><a href="#">Про компанію</a></li>
-								<li><a href="#">Виробники</a></li>
-								<li><a href="#">Асортимент продуктів</a></li>
-								<li><a href="#">Галерея</a></li>
-								<li><a href="#">Новини</a></li>
-								<li><a href="#">Як отримати картку?</a></li>
-								<li><a href="#">Акції та пропозиції</a></li>
-								<li><a href="#">Як користуватись автоматом?</a></li>
-								<li><a href="#">Як стати клієнтом?</a></li>
-								<li><a href="#">Як поповнити картку?</a></li>
-								<li><a href="#">Стати партнером</a></li>
-								<li><a href="#">Питання-відповідь</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="part entrance">
-						<h3>Вхід для батьків</h3>
-						<span class="sprtr-h"></span>
-						<form action="#" method="POST" id="entrance-form">
+						<form action="#" method="POST" id="card-form">
 							<div class="field-area">
-								<input type="tel" name="user[phone]" value="" placeholder="+38 (044) 999 9999" id="entrance-user-phone" data-inputmask="'mask': '+38 (999) 999 9999'">
-								<label for="entrance-user-phone"><span class="hr-phone"></span></label>
+								<label for="card-username">Ваше ім'я</label>
+								<input type="text" name="card[username]" value="" placeholder="Введіть ваше ім'я" id="card-username" data-rule-required="true" data-msg-required="Ви маєте ввести ім'я">
 							</div>
 							<div class="field-area">
-								<input type="password" name="user[password]" value="" placeholder="ваш пароль" id="entrance-user-password">
-								<label for="entrance-user-password"><span class="hr-lock"></span></label>
+								<label for="card-usermail">Електронна пошта</label>
+								<input type="email" name="card[usermail]" value="" placeholder="Ваша електронна пошта" id="card-usermail" data-rule-required="true" data-msg-required="Ви маєте ввести електронну пошту" data-rule-email="true" data-msg-email="Це не схоже на електронну пошту">
+							</div>
+							<div class="field-area">
+								<label for="card-userphone">Телефон</label>
+								<input type="tel" name="card[userphone]" value="" placeholder="Ваш номер телефону" id="card-userphone" data-rule-required="true" data-msg-required="Ви маєте ввести номер телефону" data-mask="+38 (999) 999-9999">
+							</div>
+							<div class="field-area">
+								<label for="card-usertext">Ваше повідомлення</label>
+								<textarea name="card[usertext]" value="" placeholder="Напишіть ваше повідомлення" id="card-usertext" data-rule-required="true" data-msg-required="Поле не може бути порожнім"></textarea>
 							</div>
 							<button type="submit">
-								<span>Увійти</span>
+								<span>Відправити</span>
 							</button>
 						</form>
 					</div>
-				</div>
-			</section>
+				</section>
+			</div>
 		</main>
 	</div>
 	<footer id="footer" class="sticky">
