--- a/project.html
+++ b/project.html
@@ -67,6 +67,9 @@
 						<li>
 							<span>пн-пт: 9:00 - 18:00</span>
 						</li>
+						<li>
+							<a href="callback.html">зворотній зв'язок</a>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -75,8 +78,8 @@
 					<nav class="menu">
 						<ul>
 							<li><a href="index.html">Головна</a></li>
-							<li><a href="about.html">Про компанію</a></li>
 							<li class="active"><a href="project.html">Наш проект</a></li>
+							<li><a href="about.html">Про компанію</a></li>
 							<li><a href="suppliers.html">Виробники</a></li>
 							<li><a href="products.html">Продукти</a></li>
 							<li><a href="contacts.html">Контакти</a></li>
@@ -91,7 +94,6 @@
 					<ul>
 						<li class="active"><a href="project.html">Наш проект</a></li>
 						<li><a href="project-advantage.html">Переваги проекту</a></li>
-						<li><a href="project-vending-machines.html">Наші вендінгові автомати</a></li>
 						<li><a href="project-get-card.html">Як отримати картку або браслет</a></li>
 						<li><a href="project-card-refill.html">Як поповнити картку або браслет</a></li>
 						<li><a href="project-how-to-use-vending-machine.html">Як користуватися вендінговим автоматов</a></li>
@@ -100,9 +102,58 @@
 				<section id="content-info-holder">
 					<h1>Наш проект</h1>
 					<span class="sprtr-h"></span>
-					<p>Компанія «Дорога Здоров’я» пропонує якісні та сертифіковані продукти харчування для перекусу, які Ваша дитина може придбати у торгівельному автоматі за допомогою безконтактної картки або браслета.</p>
-					<p>Ті продукти, які дитина зможе самостійно купувати у вендінговому (торговельному) автоматі, ретельно підібрані дієтологами з урахуванням потреб дитячого організму.</p>
-					<p>На жаль, у більшості шкільних буфетів діти не мають змоги придбати корисні продукти харчування. Невідповідність продуктів нормам дитячого харчування, може призвести до появи захворювань: ожиріння, серцеві захворювання, хвороб шлункового-кишкового тракту та ін...</p>
+					<p>Нашим дітям – лише здорове харчування</p>
+					<p>Проект «Дорога Здоров'я» створено для розв'язання однієї з найважливіших завдань - впровадження в Україні здорового додаткового шкільного харчування. Давно відомо - здорові школярі краще вчаться. Здорові школярі досягають найбільших успіхів у навчанні.</p>
+					<p>Європейська практика показує, що діти повинні, крім повноцінного обіду, в будь-який час дня мати можливість перекусити. Але це не повинні бути напої та закуски з високим вмістом жиру і цукру.</p>
+					<p>Запорука здорового харчування - це свіжі та якісні продукти, а також контроль за їх споживанням. У школі дитина повинна харчуватися за системою - «перекус-повноцінний обід-перекус». Це висновок вчених Великобританії, які вже кілька років активно впроваджують у школах здорове додаткове харчування. Проблему шкільного харчування наша компанія «Дорога Здоров'я» вирішила через систему вендінгових автоматів.</p>
+					<div class="product-categories">
+						<ul>
+							<li>
+								<a href="#">
+									<figure>
+										<img src="build/images/water.jpg" alt="">
+									</figure>
+									<div class="inner">
+										<h3>Негазована вода</h3>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<figure>
+										<img src="build/images/juice.jpg" alt="">
+									</figure>
+									<div class="inner">
+										<h3>Різноманітні соки</h3>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<figure>
+										<img src="build/images/cookies.jpg" alt="">
+									</figure>
+									<div class="inner">
+										<h3>Кондитерські вироби</h3>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<figure>
+										<img src="build/images/fruits.jpg" alt="">
+									</figure>
+									<div class="inner">
+										<h3>Свіжі фрукти</h3>
+									</div>
+								</a>
+							</li>
+						</ul>
+					</div>
+					<p>Ті продукти, які дитина зможе самостійно отримувати у вендінговому (торговельному) автоматі, ретельно підібрані провідними дитячими дієтологами та перевірені фахівцями Інституту гігієни та медичної екології з урахуванням потреб дитячого організму.</p>
+					<p>Пам’ятайте! Невідповідність продуктів нормам дитячого харчування, може призвести до появи ожиріння, захворювання судин, хвороб шлунково-кишкового тракту та ін...</p>
+					<p>У вендінгових автоматах компанії «Дорога Здоров'я» завжди тільки свіжі продукти від сертифікованих державою виробників</p>
+
 					<div class="movie-holder">
 						<div class="inner">
 							<iframe src="https://www.youtube.com/embed/b_eY9fmbUAM" frameborder="0" allowfullscreen></iframe>
@@ -112,88 +163,23 @@
 					<div class="list-holder">
 						<ul>
 							<li>
-								<p>Ваша дитина зможе користуватись персональним браслетом або карткою (у старших класах) для придбання продуктів з торговельного автомату.</p>
+								<p>Наша компанія встановлює в школі вендінговий автомат, в якому ми пропонуємо широкий асортимент натуральних соків, води, фруктів, молочних продуктів, дитячих кондитерських виробів.</p>
 							</li>
 							<li>
-								<p>Рахунок картки або браслету Ви поповнюєте самостійно та зручним для Вас способом.</p>
+								<p>Ви отримаєте для дитини браслет або пластикову карту та активуєте її (детальніше у розділі «Як отримати браслет або картку»). Ваш персональний рахунок Ви поповнюєте самостійно та у зручний для Вас способ (детальніше у розділі «Як поповнити рахунок»).</p>
 							</li>
 							<li>
-								<p>Система передбачає контроль: відправку інформаційне повідомлення на мобільний телефон батьків з інформацією про назву придбаного дитиною продукту, час операції та суму покупки, можливість встановлення ліміту на витрати, доступну функцію заборони на придбання того чи іншого продукту (при наявності проблем зі здоров’ям).</p>
+								<p>У школі, дитина купуючи продукти, наприклад сік або йогурт, просто прикладає браслет або картку до апарату і з браслета / картки списується необхідна сума, а автомат видає дитині продукти харчування.</p>
+							</li>
+							<li>
+								<p>Після отримання Ви буде відправлено смс на телефон, із зазначенням часу, переліку продуктів і суми покупки. Таким чином Ви зможете контролювати коли і що з'їла Ваша дитина.</p>
 							</li>
 						</ul>
 					</div>
-					<p><span class="attention">Увага!</span> Ви більше не будете видавати дитині кишенькові гроші, які можуть бути витрачені на чіпси, газовану солодку воду, цигарки, фаст-фуд та ін.. Гроші на особистому рахунку дитиною будуть витрачатись виключно на придбання продуктів харчування з вендінгового автомату, встановленого у школі.</p>
-					<h2>Європейський досвід</h2>
-					<span class="sprtr-h"></span>
-					<p>Європейська практика демонструє, що діти повинні, окрім повноцінного обіду, мати можливість у будь-який час перекусити. Особливо це важливо в тих випадках, коли діти залишаються у групі продовженого дня. Але це не мають бути напої та закуски, у складі яких є жир та цукор. Як приклад – досвід Великобританії в формуванні системи шкільного харчування</p>
-					<p>На початку 70-х років у Великобританії склалась повноцінна система шкільного харчування, яка була недорогою та схвалена більшістю школярів. Для дітей з низьким рівнем сімейного достатку вона була повністю безкоштовною.</p>
-					<p>В 1980 році у школах почали продавати буфетну продукцію: батончики, гамбургери, газовані напої та ін.. Вже через 20 років країна зіштовхнулась зі справжньою епідемією серцево-судинних захворювань, ожирінням та проблемами національного здоров’я, які були помічені практично у кожної людини.</p>
-					<p>Аналіз раціону харчування підлітків, проведений в 1997 році, показав: вживання цукру збільшилось, в порівнянні з 1980 роком, на 30%. Третина дітей стали регулярно, та у значних кількостях, споживати білий хліб, чіпси, солодощі, солодкі газовані напої. Менше стали споживати свіжих овочів та фруктів (50% рекомендованої кількості).</p>
-					<p>За останні 5 – 7 років у Британії різко активізували роботу по поверненню втрачених позицій. Почалось відродження традицій постачання англійським школярам  гарячої та здорової продукції. Сформувалось 2 – 3 разове харчування за системою Snack (легкий перекус) – Lunch (Обід) – Snack (легкий перекус). Здорове харчування обмежувало у раціоні насичені жирні кислоти, солодощі, солі.  Збільшилась кількість білка, поліненасичених жирних кислот (у тому числі омега-3 жирні кислоти), харчових волокон, вітамінів та мікроелементів. Кількість овочів та фруктів у щоденному раціоні збільшилась.</p>
-					<p>Наша команда сподівається, що за вашої підтримки, програма додаткового харчування для дітей, з використанням вендінгових автоматів, зможе змінити загальношкільний підхід до здорового харчування. Цілковита заборона на споживання нездорових продуктів харчуваннях – бажана та досяжна мета. Здорове харчування – майбутня дорога здоров’я дитини у дорослому житті.</p>
+					<p><span class="attention">Звертаємо Вашу увагу!</span> Ви більше не потрібно видавати дитині кишенькові гроші, які можуть бути витрачені на чіпси, газовану солодку воду, цигарки або алкоголь. Гроші на особистому рахунку дитиною будуть витрачатись виключно на придбання продуктів харчування з вендінгового автомату, встановленого у школі.</p>
+
 				</section>
 			</div>
-			<section class="pre-footer">
-				<div class="inner">
-					<div class="part contacts">
-						<h3>Контакти</h3>
-						<span class="sprtr-h"></span>
-						<ul>
-							<li>
-								<span class="item"><span class="hr-pin"></span>03002, м. Київ, вул. Ярославів Вал 13/2</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-shedule"></span>пн.-пт. 9:00 - 18:00</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-phone"></span>+38 (044) 999 9999</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-email"></span>info@kdz.com.ua</span>
-							</li>
-						</ul>
-					</div>
-					<div class="part navigation">
-						<h3>Всі розділи</h3>
-						<span class="sprtr-h"></span>
-						<div class="list-holder">
-							<ul>
-								<li><a href="#">Головна</a></li>
-								<li><a href="#">Наш проект</a></li>
-								<li><a href="#">Про компанію</a></li>
-								<li><a href="#">Виробники</a></li>
-								<li><a href="#">Асортимент продуктів</a></li>
-								<li><a href="#">Галерея</a></li>
-								<li><a href="#">Новини</a></li>
-								<li><a href="#">Як отримати картку?</a></li>
-								<li><a href="#">Акції та пропозиції</a></li>
-								<li><a href="#">Як користуватись автоматом?</a></li>
-								<li><a href="#">Як стати клієнтом?</a></li>
-								<li><a href="#">Як поповнити картку?</a></li>
-								<li><a href="#">Стати партнером</a></li>
-								<li><a href="#">Питання-відповідь</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="part entrance">
-						<h3>Вхід для батьків</h3>
-						<span class="sprtr-h"></span>
-						<form action="#" method="POST" id="entrance-form">
-							<div class="field-area">
-								<input type="tel" name="user[phone]" value="" placeholder="+38 (044) 999 9999" id="entrance-user-phone" data-inputmask="'mask': '+38 (999) 999 9999'">
-								<label for="entrance-user-phone"><span class="hr-phone"></span></label>
-							</div>
-							<div class="field-area">
-								<input type="password" name="user[password]" value="" placeholder="ваш пароль" id="entrance-user-password">
-								<label for="entrance-user-password"><span class="hr-lock"></span></label>
-							</div>
-							<button type="submit">
-								<span>Увійти</span>
-							</button>
-						</form>
-					</div>
-				</div>
-			</section>
 		</main>
 	</div>
 	<footer id="footer" class="sticky">
