--- a/suppliers-vitmark.html
+++ b/suppliers-vitmark.html
@@ -74,9 +74,9 @@
 				<div class="inner">
 					<nav class="menu">
 						<ul>
-							<li><a href="index.html">Головна</a></li>
-							<li><a href="about.html">Про компанію</a></li>
+							<li><a href="index.html">Головна</a></li>	
 							<li><a href="project.html">Наш проект</a></li>
+							<li><a href="about.html">Про компанію</a></li>
 							<li class="active"><a href="suppliers.html">Виробники</a></li>
 							<li><a href="products.html">Продукти</a></li>
 							<li><a href="contacts.html">Контакти</a></li>
@@ -90,89 +90,41 @@
 				<aside id="navigation-holder">
 					<ul>
 						<li><a href="suppliers.html">Наші виробники</a></li>
+						<li class="active"><a href="suppliers-vitmark.html">Вітмарк-Україна</a></li>
+						<li><a href="suppliers-econia.html">Еконія</a></li>
 						<li><a href="suppliers-biskvit-shokolad.html">Бісквіт-шоколад</a></li>
 						<li><a href="suppliers-solodkiy-svit.html">Солодкий світ</a></li>
-						<li><a href="suppliers-econia.html">Еконія</a></li>
+						<li><a href="#">Текмар Словенско</a></li>
+						<li><a href="suppliers-ramonka.html">Рамонка</a></li>
 						<li><a href="suppliers-sergio.html">Серджіо</a></li>
 						<li><a href="suppliers-kvartet.html">Квартет</a></li>
-						<li><a href="suppliers-ramonka.html">Рамонка</a></li>
-						<li class="active"><a href="suppliers-vitmark.html">Вітмарк-Україна</a></li>
-						<li><a href="suppliers-cherkasu-hlib.html">Черкасихліб</a></li>
 					</ul>
 				</aside>
 				<section id="content-info-holder" class="supplier-inside">
-					<h1>Вітмарк-Україна</h1>
-					<span class="sprtr-h"></span>
 					<figure>
 						<img src="build/images/suppliers/vitmark.png" alt="Вітмарк-Україна">
 					</figure>
+					<h1>Вітмарк-Україна</h1>
+					<span class="sprtr-h"></span>
+					<h3>Торгові марки компанії</h3>
+					<ul class="trade-marks-holder">
+						<li>
+							<figure>
+								<img src="build/images/suppliers/nash-sik.png" alt="Наш сок">
+							</figure>
+						</li>
+						<li>
+							<figure>
+								<img src="build/images/suppliers/jaffa.png" alt="Jaffa сок">
+							</figure>
+						</li>
+					</ul>
 					<p>Компанія Вітмарк-Україна посідає провідні позиції на українському ринку соків та напоїв, а також на ринку дитячого харчування у сегменті фруктово-овочевих соків та пюре. За підсумками 2014-го року частка компанії на ринку склала близько 28%.</p>
 					<p>У портфелі компанії широкий асортимент продукції – соки Jaffa, вода Aquarte, сім`я брендів від Одеського заводу дитячого харчування – Наш сік, соки прямого віджиму Прямосік, смузі Просто Фрукти, дитяче харчування Чудо-чадо. Лідерство компанії обумовлено високою якістю продукції, натуральністю та доступністю завдяки власній переробці українських фруктів та овочей, а також співробітництву  з провідними світовими постачальниками. Продукція компанії експортується у більш ніж 20 країн світу. Головний офіс компанії знаходиться в Одесі.</p>
 					<p>За 20-річну історію компанії Вітмарк-Україна її продукція отримала визнання багатьох авторитетних міжнародних конкурсів та рейтингів популярності брендів, але головне – це визнання споживачів.</p>
 					<p>Протягом останніх 15-ти років, продукція Вітмарк-Україна вдало експортувалась у країни СНД, Європи, а також у США, Канаду, Ізраїль. У 2013 році компанія пройшла сертифікацію на відповідність вимогам міжнародних стандартів менеджмента якості ISO 9001:2008 і системи менеджмента безпеки харчової продукції ISO 22000:2005.</p>
 				</section>
 			</div>
-			<section class="pre-footer">
-				<div class="inner">
-					<div class="part contacts">
-						<h3>Контакти</h3>
-						<span class="sprtr-h"></span>
-						<ul>
-							<li>
-								<span class="item"><span class="hr-pin"></span>03002, м. Київ, вул. Ярославів Вал 13/2</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-shedule"></span>пн.-пт. 9:00 - 18:00</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-phone"></span>+38 (044) 999 9999</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-email"></span>info@kdz.com.ua</span>
-							</li>
-						</ul>
-					</div>
-					<div class="part navigation">
-						<h3>Всі розділи</h3>
-						<span class="sprtr-h"></span>
-						<div class="list-holder">
-							<ul>
-								<li><a href="#">Головна</a></li>
-								<li><a href="#">Наш проект</a></li>
-								<li><a href="#">Про компанію</a></li>
-								<li><a href="#">Виробники</a></li>
-								<li><a href="#">Асортимент продуктів</a></li>
-								<li><a href="#">Галерея</a></li>
-								<li><a href="#">Новини</a></li>
-								<li><a href="#">Як отримати картку?</a></li>
-								<li><a href="#">Акції та пропозиції</a></li>
-								<li><a href="#">Як користуватись автоматом?</a></li>
-								<li><a href="#">Як стати клієнтом?</a></li>
-								<li><a href="#">Як поповнити картку?</a></li>
-								<li><a href="#">Стати партнером</a></li>
-								<li><a href="#">Питання-відповідь</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="part entrance">
-						<h3>Вхід для батьків</h3>
-						<span class="sprtr-h"></span>
-						<form action="#" method="POST" id="entrance-form">
-							<div class="field-area">
-								<input type="tel" name="user[phone]" value="" placeholder="+38 (044) 999 9999" id="entrance-user-phone" data-inputmask="'mask': '+38 (999) 999 9999'">
-								<label for="entrance-user-phone"><span class="hr-phone"></span></label>
-							</div>
-							<div class="field-area">
-								<input type="password" name="user[password]" value="" placeholder="ваш пароль" id="entrance-user-password">
-								<label for="entrance-user-password"><span class="hr-lock"></span></label>
-							</div>
-							<button type="submit">
-								<span>Увійти</span>
-							</button>
-						</form>
-					</div>
-				</div>
-			</section>
 		</main>
 	</div>
 	<footer id="footer" class="sticky">
