--- a/suppliers.html
+++ b/suppliers.html
@@ -67,6 +67,9 @@
 						<li>
 							<span>пн-пт: 9:00 - 18:00</span>
 						</li>
+						<li>
+							<a href="callback.html">зворотній зв'язок</a>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -75,8 +78,8 @@
 					<nav class="menu">
 						<ul>
 							<li><a href="index.html">Головна</a></li>
-							<li><a href="about.html">Про компанію</a></li>
 							<li><a href="project.html">Наш проект</a></li>
+							<li><a href="about.html">Про компанію</a></li>
 							<li class="active"><a href="suppliers.html">Виробники</a></li>
 							<li><a href="products.html">Продукти</a></li>
 							<li><a href="contacts.html">Контакти</a></li>
@@ -90,14 +93,14 @@
 				<aside id="navigation-holder">
 					<ul>
 						<li class="active"><a href="suppliers.html">Наші виробники</a></li>
+						<li><a href="suppliers-vitmark.html">Вітмарк-Україна</a></li>
+						<li><a href="suppliers-econia.html">Еконія</a></li>
 						<li><a href="suppliers-biskvit-shokolad.html">Бісквіт-шоколад</a></li>
 						<li><a href="suppliers-solodkiy-svit.html">Солодкий світ</a></li>
-						<li><a href="suppliers-econia.html">Еконія</a></li>
+						<li><a href="#">Текмар Словенско</a></li>
+						<li><a href="suppliers-ramonka.html">Рамонка</a></li>
 						<li><a href="suppliers-sergio.html">Серджіо</a></li>
 						<li><a href="suppliers-kvartet.html">Квартет</a></li>
-						<li><a href="suppliers-ramonka.html">Рамонка</a></li>
-						<li><a href="suppliers-vitmark.html">Вітмарк-Україна</a></li>
-						<li><a href="suppliers-cherkasu-hlib.html">Черкасихліб</a></li>
 					</ul>
 				</aside>
 				<section id="content-info-holder">
@@ -105,6 +108,34 @@
 					<span class="sprtr-h"></span>
 					<div class="grid">
 						<div class="row">
+							<article class="col">
+								<figure>
+									<img src="build/images/suppliers/vitmark.png" alt="Вітмарк-Україна">
+								</figure>
+								<h2>Вітмарк-Україна</h2>
+								<div class="info">
+									<p>Компанія Вітмарк-Україна посідає провідні позиції на українському ринку соків та напоїв, а також на ринку дитячого харчування</p>
+								</div>
+								<div class="btn-more">
+									<a href="suppliers-vitmark.html">
+										дізнатися більше
+									</a>
+								</div>
+							</article>
+							<article class="col">
+								<figure>
+									<img src="build/images/suppliers/ekoniya.png" alt="Еконія">
+								</figure>
+								<h2>Еконія</h2>
+								<div class="info">
+									<p>Історія компанії починається в 2001 році, коли було запущене перше місцеве виробництво спеціалізованиї води для дітей від 1 місяця до 6 років в Україні</p>
+								</div>
+								<div class="btn-more">
+									<a href="suppliers-econia.html">
+										дізнатися більше
+									</a>
+								</div>
+							</article>
 							<article class="col">
 								<figure>
 									<img src="build/images/suppliers/biskvit-shokolad.png" alt="Харьківська бісквітка фабрика">
@@ -119,6 +150,8 @@
 									</a>
 								</div>
 							</article>
+						</div>
+						<div class="row">
 							<article class="col">
 								<figure>
 									<img src="build/images/suppliers/sladkiy-myr.png" alt="Солодкий світ">
@@ -135,14 +168,28 @@
 							</article>
 							<article class="col">
 								<figure>
-									<img src="build/images/suppliers/ekoniya.png" alt="Еконія">
+									<img src="build/images/suppliers/tekmar.png" alt="Текмар Словенско">
 								</figure>
-								<h2>Еконія</h2>
+								<h2>Текмар Словенско</h2>
 								<div class="info">
-									<p>Історія компанії починається в 2001 році, коли було запущене перше місцеве виробництво спеціалізованиї води для дітей від 1 місяця до 6 років в Україні</p>
+									<p>Компанія Tekmar виробляє унікальні батончики мюслі для дієтичного харчування та активного способу життя.</p>
 								</div>
 								<div class="btn-more">
-									<a href="suppliers-econia.html">
+									<a href="suppliers-solodkiy-svit.html">
+										дізнатися більше
+									</a>
+								</div>
+							</article>
+							<article class="col">
+								<figure>
+									<img src="build/images/suppliers/ramonka.png" alt="Рамонка">
+								</figure>
+								<h2>Рамонка</h2>
+								<div class="info">
+									<p>Асортимент нашої компанії включає більше 50 найменувань традиційних солодощів - козинаки , ірис , драже , мармелад , рахат -лукум та інші вироби.</p>
+								</div>
+								<div class="btn-more">
+									<a href="suppliers-ramonka.html">
 										дізнатися більше
 									</a>
 								</div>
@@ -177,115 +224,10 @@
 									</a>
 								</div>
 							</article>
-							<article class="col">
-								<figure>
-									<img src="build/images/suppliers/ramonka.png" alt="Рамонка">
-								</figure>
-								<h2>Рамонка</h2>
-								<div class="info">
-									<p>Компанія «Арсенал - Пак» працює на ринку України з 2003 року як український виробник кондитерських виробів і продуктів снекової групи</p>
-								</div>
-								<div class="btn-more">
-									<a href="suppliers-ramonka.html">
-										дізнатися більше
-									</a>
-								</div>
-							</article>
-						</div>
-						<div class="row">
-							<article class="col">
-								<figure>
-									<img src="build/images/suppliers/vitmark.png" alt="Вітмарк-Україна">
-								</figure>
-								<h2>Вітмарк-Україна</h2>
-								<div class="info">
-									<p>Компанія Вітмарк-Україна посідає провідні позиції на українському ринку соків та напоїв, а також на ринку дитячого харчування</p>
-								</div>
-								<div class="btn-more">
-									<a href="suppliers-vitmark.html">
-										дізнатися більше
-									</a>
-								</div>
-							</article>
-							<article class="col">
-								<figure>
-									<img src="build/images/suppliers/cherkasy-hlib.png" alt="Черкасихліб">
-								</figure>
-								<h2>Черкасихліб</h2>
-								<div class="info">
-									<p>Підприємство займається виробництвом хлібобулочних виробів і є лідером по впровадженню нових технологічних ліній та процесів</p>
-								</div>
-								<div class="btn-more">
-									<a href="suppliers-cherkasu-hlib.html">
-										дізнатися більше
-									</a>
-								</div>
-							</article>
 						</div>
 					</div>
 				</section>
 			</div>
-			<section class="pre-footer">
-				<div class="inner">
-					<div class="part contacts">
-						<h3>Контакти</h3>
-						<span class="sprtr-h"></span>
-						<ul>
-							<li>
-								<span class="item"><span class="hr-pin"></span>03002, м. Київ, вул. Ярославів Вал 13/2</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-shedule"></span>пн.-пт. 9:00 - 18:00</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-phone"></span>+38 (044) 999 9999</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-email"></span>info@kdz.com.ua</span>
-							</li>
-						</ul>
-					</div>
-					<div class="part navigation">
-						<h3>Всі розділи</h3>
-						<span class="sprtr-h"></span>
-						<div class="list-holder">
-							<ul>
-								<li><a href="#">Головна</a></li>
-								<li><a href="#">Наш проект</a></li>
-								<li><a href="#">Про компанію</a></li>
-								<li><a href="#">Виробники</a></li>
-								<li><a href="#">Асортимент продуктів</a></li>
-								<li><a href="#">Галерея</a></li>
-								<li><a href="#">Новини</a></li>
-								<li><a href="#">Як отримати картку?</a></li>
-								<li><a href="#">Акції та пропозиції</a></li>
-								<li><a href="#">Як користуватись автоматом?</a></li>
-								<li><a href="#">Як стати клієнтом?</a></li>
-								<li><a href="#">Як поповнити картку?</a></li>
-								<li><a href="#">Стати партнером</a></li>
-								<li><a href="#">Питання-відповідь</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="part entrance">
-						<h3>Вхід для батьків</h3>
-						<span class="sprtr-h"></span>
-						<form action="#" method="POST" id="entrance-form">
-							<div class="field-area">
-								<input type="tel" name="user[phone]" value="" placeholder="+38 (044) 999 9999" id="entrance-user-phone" data-inputmask="'mask': '+38 (999) 999 9999'">
-								<label for="entrance-user-phone"><span class="hr-phone"></span></label>
-							</div>
-							<div class="field-area">
-								<input type="password" name="user[password]" value="" placeholder="ваш пароль" id="entrance-user-password">
-								<label for="entrance-user-password"><span class="hr-lock"></span></label>
-							</div>
-							<button type="submit">
-								<span>Увійти</span>
-							</button>
-						</form>
-					</div>
-				</div>
-			</section>
 		</main>
 	</div>
 	<footer id="footer" class="sticky">
