--- a/about.html
+++ b/about.html
@@ -67,6 +67,9 @@
 						<li>
 							<span>пн-пт: 9:00 - 18:00</span>
 						</li>
+						<li>
+							<a href="callback.html">зворотній зв'язок</a>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -75,8 +78,8 @@
 					<nav class="menu">
 						<ul>
 							<li><a href="index.html">Головна</a></li>
-							<li class="active"><a href="about.html">Про компанію</a></li>
 							<li><a href="project.html">Наш проект</a></li>
+							<li class="active"><a href="about.html">Про компанію</a></li>
 							<li><a href="suppliers.html">Виробники</a></li>
 							<li><a href="products.html">Продукти</a></li>
 							<li><a href="contacts.html">Контакти</a></li>
@@ -95,120 +98,40 @@
 				<section id="content-info-holder">
 					<h1>Нашим дітям – лише здорове харчування</h1>
 					<span class="sprtr-h"></span>
-					<p>Саме таким є гасло компанії «Дорога здоров’я». Вперше в Україні, ґрунтуючись на досвіді Британської організації UIF SM «The School Food Plan», ми запроваджуємо систему дитячого харчування за системою «Перекус-Обід-Перекус».</p>
+					<p>Компанія «Дорога здоров'я» створена для впровадження проекту додаткового здорового шкільного харчування через вендингові апарати в навчальних закладах України.</p>
+					<p>Вперше в Україні, ґрунтуючись на досвіді наших Британських колег, ми адаптували та запроваджуємо систему додаткового шкільного харчування за системою «Перекус-Обід-Перекус».</p>
 					<div class="snack-lunch-snack icons-hor">
 						<ul>
 							<li>
-								<span class="icon hr-cookies"></span>
+								<figure>
+									<img src="build/images/first-lunch.jpg" alt="">
+								</figure>
 							</li>
 							<li>
 								<span class="long-arrow"></span>
 							</li>
 							<li>
-								<span class="icon hr-soup"></span>
+								<figure>
+									<img src="build/images/lunch.jpg" alt="">
+								</figure>
 							</li>
 							<li>
 								<span class="long-arrow"></span>
 							</li>
 							<li>
-								<span class="icon hr-cookies"></span>
+								<figure>
+									<img src="build/images/second-lunch.jpg" alt="">
+								</figure>
 							</li>
 						</ul>
 						<p>Перекус-Обід-Перекус</p>
 					</div>
+					<p>Схема організації додаткового шкільного харчування Перекус-обід-перекус (Snack - Lunch - Snack), дозволяє дітям в будь-який час знаходження в навчальному закладі, отримувати додаткове харчування для відновлення дитячого організму.</p>
 					<h2>Наша головна мета</h2>
 					<span class="sprtr-h"></span>
-					<p>Запровадження системи здорового дитячого харчування «Перекус-Обід-Перекус» у шкільних навчальних закладах України.</p>
-					<p>Разом з батьками школярів, ми вводимо в щоденний раціон дітей лише корисні продукти харчування, виключаючи чіпси, фаст-фуд, газовану воду та солодощі із забороненими консервантами та барвниками.</p>
-					<p>Діти повинні мати можливість харчуватись корисно у будь-який час, знаходячись у школі. Одного лише шкільного обіду не достатньо. Саме тому споживання корисних продуктів та напоїв має бути невід’ємною частиною денного раціону.</p>
-					<p>Впроваджуючи дану систему харчування, ми прививаємо дітям бажання вести здоровий спосіб життя, де корисне харчування займає одне з перших місць.</p>
-					<h2>Система корисного та здорового харчування «Перекус-Обід-Перекус» передбачає</h2>
-					<span class="sprtr-h"></span>
-					<p>Встановлення у шкільних навчальних закладах вендінгових (торговельних) автоматів</p>
-					<div class="icons-hor">
-						<ul>
-							<li>
-								<span class="icon hr-juice"></span>
-								<p>Фруктові соки</p>
-							</li>
-							<li>
-								<span class="icon hr-water"></span>
-								<p>Негазована вода</p>
-							</li>
-							<li>
-								<span class="icon hr-cake"></span>
-								<p>Кондитерські вироби</p>
-							</li>
-							<li>
-								<span class="icon hr-banana"></span>
-								<p>Фрукти</p>
-							</li>
-						</ul>
-					</div>
-					<p>Уся продукція надходить напряму від заводів сертифікованих виробників продуктів дитячого харчування. Ми постійно контролюємо справність роботи апаратів, які оснащенні охолоджувальними пристроями, забезпечуючи тим самим зберігання свіжих та придатних до вживанні продуктів.</p>
-				</section>
-			</div>
-			<section class="pre-footer">
-				<div class="inner">
-					<div class="part contacts">
-						<h3>Контакти</h3>
-						<span class="sprt-h"></span>
-						<ul>
-							<li>
-								<span class="item"><span class="hr-pin"></span>03002, м. Київ, вул. Ярославів Вал 13/2</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-shedule"></span>пн.-пт. 9:00 - 18:00</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-phone"></span>+38 (044) 999 9999</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-email"></span>info@kdz.com.ua</span>
-							</li>
-						</ul>
-					</div>
-					<div class="part navigation">
-						<h3>Всі розділи</h3>
-						<span class="sprt-h"></span>
-						<div class="list-holder">
-							<ul>
-								<li><a href="#">Головна</a></li>
-								<li><a href="#">Наш проект</a></li>
-								<li><a href="#">Про компанію</a></li>
-								<li><a href="#">Виробники</a></li>
-								<li><a href="#">Асортимент продуктів</a></li>
-								<li><a href="#">Галерея</a></li>
-								<li><a href="#">Новини</a></li>
-								<li><a href="#">Як отримати картку?</a></li>
-								<li><a href="#">Акції та пропозиції</a></li>
-								<li><a href="#">Як користуватись автоматом?</a></li>
-								<li><a href="#">Як стати клієнтом?</a></li>
-								<li><a href="#">Як поповнити картку?</a></li>
-								<li><a href="#">Стати партнером</a></li>
-								<li><a href="#">Питання-відповідь</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="part entrance">
-						<h3>Вхід для батьків</h3>
-						<span class="sprtr-h"></span>
-						<form action="#" method="POST" id="entrance-form">
-							<div class="field-area">
-								<input type="tel" name="user[phone]" value="" placeholder="+38 (044) 999 9999" id="entrance-user-phone" data-inputmask="'mask': '+38 (999) 999 9999'">
-								<label for="entrance-user-phone"><span class="hr-phone"></span></label>
-							</div>
-							<div class="field-area">
-								<input type="password" name="user[password]" value="" placeholder="ваш пароль" id="entrance-user-password">
-								<label for="entrance-user-password"><span class="hr-lock"></span></label>
-							</div>
-							<button type="submit">
-								<span>Увійти</span>
-							</button>
-						</form>
-					</div>
-				</div>
-			</section>
+					<p>Запровадження системи додаткового здорового шкільного харчування «Перекус-Обід-Перекус» у шкільних навчальних закладах України.</p>
+					<p>Разом з провідними дитячими дієтологами та фахівцями Інстітуту гігієни та медичної екології , ми вводимо в щоденний раціон дітей лише корисні продукти харчування, виключаючи чіпси, фаст-фуд, газовану воду та шоколадні вироби із забороненими консервантами та барвниками.</p>
+					<p>Діти повинні мати можливість харчуватись корисно у будь-який час, знаходячись у школі. Одного лише шкільного обіду не достатньо. Саме тому споживання корисних продуктів та напоїв має бути невід’ємною частиною денного раціону. Впроваджуючи дану систему харчування, ми прививаємо дітям бажання вести здоровий спосіб життя, де корисне харчування займає одне з перших місць.</p>
 		</main>
 	</div>
 	<footer id="footer" class="sticky">
