--- a/project-advantage.html
+++ b/project-advantage.html
@@ -67,6 +67,9 @@
 						<li>
 							<span>пн-пт: 9:00 - 18:00</span>
 						</li>
+						<li>
+							<a href="callback.html">зворотній зв'язок</a>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -75,8 +78,8 @@
 					<nav class="menu">
 						<ul>
 							<li><a href="index.html">Головна</a></li>
-							<li><a href="about.html">Про компанію</a></li>
 							<li class="active"><a href="project.html">Наш проект</a></li>
+							<li><a href="about.html">Про компанію</a></li>
 							<li><a href="suppliers.html">Виробники</a></li>
 							<li><a href="products.html">Продукти</a></li>
 							<li><a href="contacts.html">Контакти</a></li>
@@ -91,7 +94,6 @@
 					<ul>
 						<li><a href="project.html">Наш проект</a></li>
 						<li class="active"><a href="project-advantage.html">Переваги проекту</a></li>
-						<li><a href="project-vending-machines.html">Наші вендінгові автомати</a></li>
 						<li><a href="project-get-card.html">Як отримати картку або браслет</a></li>
 						<li><a href="project-card-refill.html">Як поповнити картку або браслет</a></li>
 						<li><a href="project-how-to-use-vending-machine.html">Як користуватися вендінговим автоматов</a></li>
@@ -102,101 +104,24 @@
 					<div class="list-holder">
 						<ul>
 							<li>
-								<p>Дитина отримує браслет або картку (в старших класах) та доступ до вендінгового автомату.</p>
-							</li>
-							<li>
-								<p>В школі за допомогою браслету або картки дитина отримує з вендінгового автомату продукти.</p>
-							</li>
-							<li>
-								<p>Смс-повідомлення на номер телефону батьків надходить моментально з інформацією про вартість, назву продукту на суму витрат.</p>
-							</li>
-						</ul>
-					</div>
-					<h2>Та це далеко не усі функції контролю, які стануть доступними з придбанням браслету або картки</h2>
-					<div class="list-holder black">
-						<ul>
-							<li>
 								<p>Дитина не зможе витрати суму, вищу за встановлений батьками ліміт.</p>
 							</li>
 							<li>
 								<p>Дитина не зможе використати браслет або картку ніде, окрім як у вендінговому автоматі. Це означає, що вона не зможе купити чіпси, газовані напої, алкоголь або цигарки.</p>
 							</li>
 							<li>
-								<p>Гроші, нараховані на карту або браслет, не зможуть відібрати хулігани.</p>
+								<p>Гроші, нараховані на карту або браслет, не зможуть відібрати.</p>
 							</li>
 							<li>
-								<p>Ви завжди проінформовані: що, коли та на яку суму придбала дитина.</p>
+								<p>Ви завжди проінформовані: які продукти, у якій час та на яку суму отримала Ваша дитина.</p>
 							</li>
 							<li>
-								<p>Ви можете контролювати кількість спожитих калорій та, при необхідності, встановити індивідуальну заборону на той чи інший продукт.</p>
+								<p>Якщо Ви бажаєте, Ви можете замовити послугу та контролювати кількість спожитих калорій та, при необхідності, встановити індивідуальну заборону на той чи інший продукт.</p>
 							</li>
 						</ul>
 					</div>
-					<p>Батьки щодня цікавляться, що саме їла дитина у школі. В дитячих навчальних закладах часто дітей годують продуктами, які мають у своєму складі заборонені ароматизатори та консерванти, що відображається як на здоров’ї, так і на успішності. Найпоширенішою проблемою є продаж газованих напоїв, чіпсів, цукерок та інших продуктів у шкільних буфетах. Ці продукти часто не відповідають нормам дитячого харчування., а це прямий шлях до ожиріння, сердечних захворювань, хвороб шлункового-кишкового тракту.</p>
-					<p>Ми пропонуємо систему харчування, в якій не буде місця шкідливим для здоров’я дитина продуктам. Система «Перекус-Обід-Перекус» дозволить скорегувати щоденний раціон школярів, включаючи лише сертифіковані та якісні продукти харчування.</p>
 				</section>
 			</div>
-			<section class="pre-footer">
-				<div class="inner">
-					<div class="part contacts">
-						<h3>Контакти</h3>
-						<span class="sprtr-h"></span>
-						<ul>
-							<li>
-								<span class="item"><span class="hr-pin"></span>03002, м. Київ, вул. Ярославів Вал 13/2</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-shedule"></span>пн.-пт. 9:00 - 18:00</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-phone"></span>+38 (044) 999 9999</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-email"></span>info@kdz.com.ua</span>
-							</li>
-						</ul>
-					</div>
-					<div class="part navigation">
-						<h3>Всі розділи</h3>
-						<span class="sprtr-h"></span>
-						<div class="list-holder">
-							<ul>
-								<li><a href="#">Головна</a></li>
-								<li><a href="#">Наш проект</a></li>
-								<li><a href="#">Про компанію</a></li>
-								<li><a href="#">Виробники</a></li>
-								<li><a href="#">Асортимент продуктів</a></li>
-								<li><a href="#">Галерея</a></li>
-								<li><a href="#">Новини</a></li>
-								<li><a href="#">Як отримати картку?</a></li>
-								<li><a href="#">Акції та пропозиції</a></li>
-								<li><a href="#">Як користуватись автоматом?</a></li>
-								<li><a href="#">Як стати клієнтом?</a></li>
-								<li><a href="#">Як поповнити картку?</a></li>
-								<li><a href="#">Стати партнером</a></li>
-								<li><a href="#">Питання-відповідь</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="part entrance">
-						<h3>Вхід для батьків</h3>
-						<span class="sprtr-h"></span>
-						<form action="#" method="POST" id="entrance-form">
-							<div class="field-area">
-								<input type="tel" name="user[phone]" value="" placeholder="+38 (044) 999 9999" id="entrance-user-phone" data-inputmask="'mask': '+38 (999) 999 9999'">
-								<label for="entrance-user-phone"><span class="hr-phone"></span></label>
-							</div>
-							<div class="field-area">
-								<input type="password" name="user[password]" value="" placeholder="ваш пароль" id="entrance-user-password">
-								<label for="entrance-user-password"><span class="hr-lock"></span></label>
-							</div>
-							<button type="submit">
-								<span>Увійти</span>
-							</button>
-						</form>
-					</div>
-				</div>
-			</section>
 		</main>
 	</div>
 	<footer id="footer" class="sticky">
