--- a/project-card-refill.html
+++ b/project-card-refill.html
@@ -67,6 +67,9 @@
 						<li>
 							<span>пн-пт: 9:00 - 18:00</span>
 						</li>
+						<li>
+							<a href="callback.html">зворотній зв'язок</a>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -75,8 +78,8 @@
 					<nav class="menu">
 						<ul>
 							<li><a href="index.html">Головна</a></li>
-							<li><a href="about.html">Про компанію</a></li>
 							<li class="active"><a href="project.html">Наш проект</a></li>
+							<li><a href="about.html">Про компанію</a></li>
 							<li><a href="suppliers.html">Виробники</a></li>
 							<li><a href="products.html">Продукти</a></li>
 							<li><a href="contacts.html">Контакти</a></li>
@@ -91,7 +94,6 @@
 					<ul>
 						<li><a href="project.html">Наш проект</a></li>
 						<li><a href="project-advantage.html">Переваги проекту</a></li>
-						<li><a href="project-vending-machines.html">Наші вендінгові автомати</a></li>
 						<li><a href="project-get-card.html">Як отримати картку або браслет</a></li>
 						<li class="active"><a href="project-card-refill.html">Як поповнити картку або браслет</a></li>
 						<li><a href="project-how-to-use-vending-machine.html">Як користуватися вендінговим автоматов</a></li>
@@ -102,86 +104,64 @@
 					<div class="list-holder">
 						<ul>
 							<li>
-								<p>У будь-якому банку, відправивши кошти на рахунок, вказаний у додатку до картки. У платежі вам потрібно вказати ваш індивідуальний код картки «Дорога Здоров’я». Зверніть увагу! За переказ банк візьме комісію відповідно з тарифами самого банку. Розмір комісії ви можете дізнатись у оператора банку. В банках-партнерах (Приват банк, Райффайзен банк Аваль) <strong>комісію сплачує наша компанія</strong>.</p>
-								<span class="description">Сума сплати буде нарахована на картку або браслет упродовж наступного дня.</span>
+								<p>У будь-якому відділенні Приват-банку, відправивши кошти на рахунок, вказаний у додатку до картки. У платежі Вам потрібно вказати Ваш індивідуальний код картки/браслета «Дорога Здоров’я». Комісію банку сплачує наша компанія. <strong>Сума сплати буде нарахована на картку або браслет упродовж 2х банківських днів</strong>.</p>
+								<span class="description">Зверніть увагу! У будь-якому іншому банку за переказ коштів на поповнення картки, банк візьме комісію відповідно з тарифами самого банку. Розмір комісії Ви можете дізнатись у оператора банку.</span>
 							</li>
 							<li>
-								<p>У будь-якому відділенні Укрпошти, вказавши у платежі «Поповнення рахунку картки Дорога Здоров’я», суму та індивідуальний код картки (вказаний на картці «Дорога Здоров’я»). За переказ через Укрпошту <strong>комісія сплачується нашою компанією</strong>. Сума сплати буде нарахована на картку або браслет упродовж наступного дня.</p>
+								<p>У будь-якому відділенні Укрпошти, вказавши у платежі «Поповнення рахунку картки Дорога Здоров’я», суму та індивідуальний код картки (вказаний на картці «Дорога Здоров’я»). За переказ через Укрпошту комісія сплачується нашою компанією. Сума сплати буде нарахована на картку або браслет упродовж наступних 4х банківських днів.</p>
 							</li>
 							<li>
 								<p>Через інтернет-банк «Приват 24». При заповненні платежу, вам потрібно вказати індивідуальний номер картки (вказаний на картці «Дорога Здоров’я»). Сума сплати буде нарахована на картку або браслет упродовж наступного дня.</p>
 							</li>
 							<li>
-								<p>У терміналі Приват-банку. При заповненні платежу, вам потрібно вказати індивідуальний номер картки (вказаний на картці «Дорога Здоров’я»). <strong>Комісію сплачує наша компанія</strong>. Сума сплати буде нарахована на картку або браслет упродовж наступного дня.</p>
+								<p>У терміналі Приват-банку. При заповненні платежу, вам потрібно вказати індивідуальний номер картки (вказаний на картці «Дорога Здоров’я»). Комісію сплачує наша компанія. Сума сплати буде нарахована на картку або браслет упродовж наступного дня.</p>
+							</li>
+							<li>
+								<p>Оплатити карткою Visa або MasterCard через сайт нашої компанії в розділі поповнення картки. При заповненні Вам необхідно вказати Ваш індивідуальний код картки (вказано на картці ДЗ). Сума оплати буде зарахована на картку протягом наступного дня. Звертаємо Вашу увагу, що за переклад банк може взяти комісію згідно Вашого договору про обслуговування картки.</p>
 							</li>
 							<li>
 								<p>Якщо у вас є відкритий рахунок у банку або ви використовуєте кредитну карту, ви маєте можливість скористатись послугою автоматичної сплати рахунку. У такому випадку, щомісячно, або у разі, якщо на картці/браслеті закінчились гроші, вони будуть зніматись автоматично (з урахуванням встановленої вами суми).</p>
 							</li>
 						</ul>
 					</div>
+					<h2>Зразок реквізитів для поповнення рахунку</h2>
+					<span class="sprtr-h"></span>
+					<div class="payment-example-holder">
+						<h3>Для сплати на Укрпошті</h3>
+						<ul>
+							<li><p><span>Отримувач:</span> ТОВ «Дорога здоров`я»</p></li>
+							<li><p><span>ЄДРПОУ:</span> 39393171</p></li>
+							<li><p><span>Р/р:</span> 2600 8052 6376 97</p></li>
+							<li><p><span>МФО:</span> 320649 в ПАТ КБ «ПРИВАТ БАНК»</p></li>
+							<li><p><span>Призначення платежу:</span> № картки, ПІБ власника, оплата за товар.</p></li>
+						</ul>
+						<p><span class="attention">Увага!</span> У призначенні платежу обов`язково вказуйте номер картки</p>
+					</div>
+					<div class="payment-example-holder">
+						<h3>В найближчому відділенні  ПАТ КБ «ПРИВАТ-БАНК»</h3>
+						<ul>
+							<li><p><span>Отримувач:</span> ТОВ «Дорога здоров`я»</p></li>
+							<li><p><span>ЄДРПОУ:</span> 39393171</p></li>
+							<li><p><span>Р/р:</span> 2600 8052 6376 97</p></li>
+							<li><p><span>МФО:</span> 320649 в ПАТ КБ «ПРИВАТ БАНК»</p></li>
+							<li><p><span>Призначення платежу:</span> № картки, ПІБ власника, оплата за товар.</p></li>
+						</ul>
+						<p><span class="attention">Увага!</span> У призначенні платежу обов`язково вказуйте номер картки</p>
+					</div>
+					<div class="payment-example-holder">
+						<h3>Через систему «ПРИВАТ 24» або термінал ПАТ КБ ПРИВАТБАНК</h3>
+						<p>Вкладка «Мои платежи»</p>
+						<ul>
+							<li><p><span>Пошук організації:</span> Чтобы создать платеж, введите ЕГРПОУ, номер р/счета или название предприятия.</p></li>
+							<li><p>Потрібно ввести ЕГРПОУ - 39393171, або номер р/счета - 26008052637697 , або   название предприятия  - ТОВ  Дорога здоров`я</p></li>
+							<li><p><span>Призначення платежу:</span> № картки , ПІБ власника, Поповнення картки Иванов Иван Иванович</p></li>
+						</ul>
+						<p><span class="attention">Увага!</span> У призначенні платежу обов`язково вказуйте номер картки</p>
+					</div>
+					<p><span class="attention">До уваги платників!</span> Всі поповнення, здійснені у мережі ПТ КБ ПриватБанку проводяться без комісії за переказ.</p>
+					<p>Якщо поповнення здійснюється через системи інших Банків, комісія за переказ складає відсоток від суми згідно діючим тарифам Банку.</p>
 				</section>
 			</div>
-			<section class="pre-footer">
-				<div class="inner">
-					<div class="part contacts">
-						<h3>Контакти</h3>
-						<span class="sprtr-h"></span>
-						<ul>
-							<li>
-								<span class="item"><span class="hr-pin"></span>03002, м. Київ, вул. Ярославів Вал 13/2</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-shedule"></span>пн.-пт. 9:00 - 18:00</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-phone"></span>+38 (044) 999 9999</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-email"></span>info@kdz.com.ua</span>
-							</li>
-						</ul>
-					</div>
-					<div class="part navigation">
-						<h3>Всі розділи</h3>
-						<span class="sprtr-h"></span>
-						<div class="list-holder">
-							<ul>
-								<li><a href="#">Головна</a></li>
-								<li><a href="#">Наш проект</a></li>
-								<li><a href="#">Про компанію</a></li>
-								<li><a href="#">Виробники</a></li>
-								<li><a href="#">Асортимент продуктів</a></li>
-								<li><a href="#">Галерея</a></li>
-								<li><a href="#">Новини</a></li>
-								<li><a href="#">Як отримати картку?</a></li>
-								<li><a href="#">Акції та пропозиції</a></li>
-								<li><a href="#">Як користуватись автоматом?</a></li>
-								<li><a href="#">Як стати клієнтом?</a></li>
-								<li><a href="#">Як поповнити картку?</a></li>
-								<li><a href="#">Стати партнером</a></li>
-								<li><a href="#">Питання-відповідь</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="part entrance">
-						<h3>Вхід для батьків</h3>
-						<span class="sprtr-h"></span>
-						<form action="#" method="POST" id="entrance-form">
-							<div class="field-area">
-								<input type="tel" name="user[phone]" value="" placeholder="+38 (044) 999 9999" id="entrance-user-phone" data-inputmask="'mask': '+38 (999) 999 9999'">
-								<label for="entrance-user-phone"><span class="hr-phone"></span></label>
-							</div>
-							<div class="field-area">
-								<input type="password" name="user[password]" value="" placeholder="ваш пароль" id="entrance-user-password">
-								<label for="entrance-user-password"><span class="hr-lock"></span></label>
-							</div>
-							<button type="submit">
-								<span>Увійти</span>
-							</button>
-						</form>
-					</div>
-				</div>
-			</section>
 		</main>
 	</div>
 	<footer id="footer" class="sticky">
