--- a/suppliers-solodkiy-svit.html
+++ b/suppliers-solodkiy-svit.html
@@ -75,8 +75,8 @@
 					<nav class="menu">
 						<ul>
 							<li><a href="index.html">Головна</a></li>
-							<li><a href="about.html">Про компанію</a></li>
 							<li><a href="project.html">Наш проект</a></li>
+							<li><a href="about.html">Про компанію</a></li>
 							<li class="active"><a href="suppliers.html">Виробники</a></li>
 							<li><a href="products.html">Продукти</a></li>
 							<li><a href="contacts.html">Контакти</a></li>
@@ -88,16 +88,16 @@
 		<main id="content" class="sticky">
 			<div class="outer inside">
 				<aside id="navigation-holder">
-					<ul>
+				<ul>
 						<li><a href="suppliers.html">Наші виробники</a></li>
+						<li><a href="suppliers-vitmark.html">Вітмарк-Україна</a></li>
+						<li><a href="suppliers-econia.html">Еконія</a></li>
 						<li><a href="suppliers-biskvit-shokolad.html">Бісквіт-шоколад</a></li>
 						<li class="active"><a href="suppliers-solodkiy-svit.html">Солодкий світ</a></li>
-						<li><a href="suppliers-econia.html">Еконія</a></li>
+						<li><a href="#">Текмар Словенско</a></li>
+						<li><a href="suppliers-ramonka.html">Рамонка</a></li>
 						<li><a href="suppliers-sergio.html">Серджіо</a></li>
 						<li><a href="suppliers-kvartet.html">Квартет</a></li>
-						<li><a href="suppliers-ramonka.html">Рамонка</a></li>
-						<li><a href="suppliers-vitmark.html">Вітмарк-Україна</a></li>
-						<li><a href="suppliers-cherkasu-hlib.html">Черкасихліб</a></li>
 					</ul>
 				</aside>
 				<section id="content-info-holder" class="supplier-inside">
@@ -111,67 +111,6 @@
 					<p>Компанія випускає близько ста видів продукції. Солодощі компанії «СОЛОДКИЙ СВІТ» продаються в Україні, Латвії, Польщі, Болгарії, Німеччини.</p>
 				</section>
 			</div>
-			<section class="pre-footer">
-				<div class="inner">
-					<div class="part contacts">
-						<h3>Контакти</h3>
-						<span class="sprtr-h"></span>
-						<ul>
-							<li>
-								<span class="item"><span class="hr-pin"></span>03002, м. Київ, вул. Ярославів Вал 13/2</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-shedule"></span>пн.-пт. 9:00 - 18:00</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-phone"></span>+38 (044) 999 9999</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-email"></span>info@kdz.com.ua</span>
-							</li>
-						</ul>
-					</div>
-					<div class="part navigation">
-						<h3>Всі розділи</h3>
-						<span class="sprtr-h"></span>
-						<div class="list-holder">
-							<ul>
-								<li><a href="#">Головна</a></li>
-								<li><a href="#">Наш проект</a></li>
-								<li><a href="#">Про компанію</a></li>
-								<li><a href="#">Виробники</a></li>
-								<li><a href="#">Асортимент продуктів</a></li>
-								<li><a href="#">Галерея</a></li>
-								<li><a href="#">Новини</a></li>
-								<li><a href="#">Як отримати картку?</a></li>
-								<li><a href="#">Акції та пропозиції</a></li>
-								<li><a href="#">Як користуватись автоматом?</a></li>
-								<li><a href="#">Як стати клієнтом?</a></li>
-								<li><a href="#">Як поповнити картку?</a></li>
-								<li><a href="#">Стати партнером</a></li>
-								<li><a href="#">Питання-відповідь</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="part entrance">
-						<h3>Вхід для батьків</h3>
-						<span class="sprtr-h"></span>
-						<form action="#" method="POST" id="entrance-form">
-							<div class="field-area">
-								<input type="tel" name="user[phone]" value="" placeholder="+38 (044) 999 9999" id="entrance-user-phone" data-inputmask="'mask': '+38 (999) 999 9999'">
-								<label for="entrance-user-phone"><span class="hr-phone"></span></label>
-							</div>
-							<div class="field-area">
-								<input type="password" name="user[password]" value="" placeholder="ваш пароль" id="entrance-user-password">
-								<label for="entrance-user-password"><span class="hr-lock"></span></label>
-							</div>
-							<button type="submit">
-								<span>Увійти</span>
-							</button>
-						</form>
-					</div>
-				</div>
-			</section>
 		</main>
 	</div>
 	<footer id="footer" class="sticky">
